--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,3 +21,14 @@ jobs:
                 
                 docker build -t dockeracrpm.azurecr.io/myapp:latest .
                 docker push dockeracrpm.azurecr.io/myapp:latest
+                
+            - name: deploy on container instance
+              run: |
+               az container create --resource-group docker-user --name mycontainer  --cpu 1 --memory 1 \
+               --os-type Linux \
+               --registry-login-server dockeracrpm.azurecr.io \
+               --registry-username ${{secrets.username}} \
+               --registry-password ${{secrets.password}} \
+               --image dockeracrpm.azurecr.io/myapp:latest \
+               --ports 3000 \
+               --dns-name-label myapp-dns
