--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,34 +1,43 @@
 name: Build and Push image to ACR
+
 on:
     push:
         branches:
             - main
+
 jobs:
     build-and-push:
         runs-on: ubuntu-latest
+
         steps:
             - name: checkout the code
               uses: actions/checkout@v2
+
             - name: Azure Login
               uses: azure/login@v2
               with:
                 creds: ${{secrets.AZURE_CREDENTIALS}}
+
             - name: ACR login
               run: |
-                az acr login --name DockerACRPM
+                az acr login --name mydockeracrredgistry
+
             - name: Build and push the image
               run: |
                 
-                docker build -t dockeracrpm.azurecr.io/myapp:latest .
-                docker push dockeracrpm.azurecr.io/myapp:latest
-                
-            - name: deploy on container instance
-              run: |
-               az container create --resource-group docker-user --name mycontainer  --cpu 1 --memory 1 \
-               --os-type Linux \
-               --registry-login-server dockeracrpm.azurecr.io \
-               --registry-username ${{secrets.username}} \
-               --registry-password ${{secrets.password}} \
-               --image dockeracrpm.azurecr.io/myapp:latest \
-               --ports 3000 \
-               --dns-name-label myapp-dns
+                docker build -t mydockeracrredgistry.azurecr.io/myapp:${{ github.sha }} .
+                docker push mydockeracrredgistry.azurecr.io/myapp:${{ github.sha }}
+
+            - name: 'Deploy to Azure Container Instances'
+              uses: 'azure/aci-deploy@v1'
+              with:
+                  resource-group: docker
+                  dns-name-label: getstartedapp
+                  image: mydockeracrredgistry.azurecr.io/myapp:${{ github.sha }}
+                  ports: 3000
+                  cpu: 1
+                  memory: 1
+                  registry-username: ${{ secrets.username }}
+                  registry-password: ${{ secrets.password }}
+                  name: helloworld
+                  location: 'westus'
