--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -32,12 +32,12 @@ jobs:
               uses: 'azure/aci-deploy@v1'
               with:
                   resource-group: dockerdemo
-                  dns-name-label: getstartedapp
+                  dns-name-label: getstartedapptodo
                   image: acrcontainerdemo1.azurecr.io/myapp:${{ github.sha }}
                   ports: 3000
                   cpu: 1
                   memory: 1
                   registry-username: ${{ secrets.username }}
                   registry-password: ${{ secrets.password }}
-                  name: helloworld
+                  name: ineedmoney
                   location: 'westus'
